--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "firebase": "^9.22.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vue-scrollto": "^2.20.0",
